added media changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section class="main-content">
                 <h2 id="about" >About</h2>
                 <div>
-                    <img src="http://www.placepuppy.net/1p/200/200" style="float:left; padding-left:15px; padding-right:15px;" alt="">
+                    <img src="./assets/images/abe.jpg"  class="about-img" alt="">
                     Mollit pariatur proident esse ullamco incididunt incididunt irure sint sint. Do id deserunt exercitation officia. Adipisicing ea do tempor reprehenderit eiusmod laborum non mollit Lorem tempor. Minim nisi mollit eu id mollit adipisicing. Consequat laboris cillum voluptate do tempor est Lorem amet sit reprehenderit commodo occaecat.
                     <p>Et adipisicing id reprehenderit excepteur anim culpa esse dolor amet ut sint duis. In Lorem aliquip magna veniam laborum ullamco ad veniam. Occaecat veniam proident exercitation deserunt nulla ut. Ipsum consequat tempor excepteur cupidatat ut nulla occaecat et. Voluptate in consectetur cillum cupidatat aliquip amet occaecat voluptate cupidatat.</p>
                 </div>
