--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2 id="about" >About</h2>
                 <div>
                     <img src="./assets/images/abe.jpg"  class="about-img" alt="">
-                    Mollit pariatur proident esse ullamco incididunt incididunt irure sint sint. Do id deserunt exercitation officia. Adipisicing ea do tempor reprehenderit eiusmod laborum non mollit Lorem tempor. Minim nisi mollit eu id mollit adipisicing. Consequat laboris cillum voluptate do tempor est Lorem amet sit reprehenderit commodo occaecat.
+                    I am a technial engineer that loves to code. I am located in the twin cities.  I love to play board games and vieo games with friends. I and I love working with new kinds of technology. 
                     <p>Et adipisicing id reprehenderit excepteur anim culpa esse dolor amet ut sint duis. In Lorem aliquip magna veniam laborum ullamco ad veniam. Occaecat veniam proident exercitation deserunt nulla ut. Ipsum consequat tempor excepteur cupidatat ut nulla occaecat et. Voluptate in consectetur cillum cupidatat aliquip amet occaecat voluptate cupidatat.</p>
                 </div>
             </section>
